fix: fixed missing type and variables declaration
